--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,9 +54,10 @@ jobs:
           path: '/home/runner/work/gue_airflow/gue_airflow/dags'
           destination: 'asia-southeast1-airflow-c8bbb248-bucket'
       
-      - id: 'delete-file-data'
-        name: 'Delete File Data'
-        run: 'gsutil rm gs://asia-southeast1-airflow-c8bbb248-bucket/data/sql/intermediaries/test2.sql'
+      #sample code for delete specific file
+      #- id: 'delete-file-data'
+      #  name: 'Delete File Data'
+      #  run: 'gsutil rm gs://asia-southeast1-airflow-c8bbb248-bucket/data/sql/intermediaries/test2.sql'
 
       #- id: 'delete-folder-data'
       #  name: 'Delete Folder Data'
